/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id 'java-library'
    id 'maven-publish'
}

repositories {
    mavenLocal()
    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }
}

dependencies {
    implementation 'javax.servlet:jstl:1.2'
    implementation 'com.google.guava:guava:18.0'
    implementation 'com.h2database:h2:1.3.167'
    implementation 'org.apache.commons:commons-lang3:3.3.2'
    implementation 'org.apache.commons:commons-dbcp2:2.1.1'
    implementation 'org.springframework:spring-jdbc:4.2.5.RELEASE'
    implementation 'org.springframework:spring-test:4.2.5.RELEASE'
    implementation 'org.reflections:reflections:0.9.10'
    implementation 'ch.qos.logback:logback-classic:1.1.2'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.4.4'
    implementation 'org.apache.tomcat.embed:tomcat-embed-core:8.0.15'
    implementation 'org.apache.tomcat.embed:tomcat-embed-logging-juli:8.0.15'
    implementation 'org.apache.tomcat.embed:tomcat-embed-jasper:8.0.15'
    compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
    testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.22.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
    testImplementation 'org.mockito:mockito-core:3.12.4'
    testImplementation 'org.mockito:mockito-junit-jupiter:3.12.4'
}

group = 'org.nhnnext'
version = '1.0'
description = 'jwp-basic'
java.sourceCompatibility = JavaVersion.VERSION_11

publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

tasks.withType(Javadoc) {
    options.encoding = 'UTF-8'
}

tasks.named('test') {
    useJUnitPlatform()
}
targetCompatibility = JavaVersion.VERSION_11
